Fix travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ language: java
 jdk:
   - oraclejdk8
   
+script: 
+  - chmod 700 ./mvnw
+  - ./mvnw clean compile
+  
 env:
   global:
   - SONATYPE_USERNAME=ralscha23
