--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>bson</artifactId>
-			<version>3.6.0-beta2</version>
+			<version>3.6.0-rc1</version>
 		</dependency>		
 	</dependencies>
 
@@ -118,6 +118,13 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.0.2</version>
+				<configuration>
+					<archive>
+						<manifestEntries>
+							<Automatic-Module-Name>ch.rasc.bsoncodec.annotations</Automatic-Module-Name>
+						</manifestEntries>
+					</archive>
+				</configuration>				
 			</plugin>
 
 			<plugin>
