--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>bson</artifactId>
-			<version>3.6.0-rc1</version>
+			<version>3.6.0</version>
 		</dependency>		
 	</dependencies>
 
