--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,7 @@
 						<exclude>**/maven-wrapper.properties</exclude>
 						<exclude>.editorconfig</exclude>
 						<exclude>.mvn/**/*</exclude>
+						<exclude>.github/**</exclude>
 					</excludes>
 					<strictCheck>true</strictCheck>
 				</configuration>
