--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>bson</artifactId>
-			<version>3.12.8</version>
+			<version>3.12.10</version>
 		</dependency>		
 	</dependencies>
 
@@ -105,7 +105,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-install-plugin</artifactId>
-				<version>2.5.3</version>
+				<version>3.0.0-M1</version>
 			</plugin>
 
 			<plugin>
